--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "koa-s3-sign-upload",
-  "version": "1.0.5",
+  "version": "2.0.0",
+  "engines": {
+    "node": "6.10.0"
+  },
   "description": "Middleware for Koa to Sign S3 upload requests",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "posttest": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -24,6 +29,8 @@
   "dependencies": {
     "aws-sdk": "^2.9.0",
     "koa-router": "^5.4.1",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "eslint": "^3.19.0",
+    "eslint-plugin-node": "^4.2.2"
   }
 }
