--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "koa-s3-sign-upload",
+  "name": "@d2l/koa-s3-sign-upload",
   "version": "3.0.0",
   "engines": {
     "node": "8.10.0"
