--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "koa-s3-sign-upload",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "engines": {
-    "node": "6.10.0"
+    "node": "8.x"
   },
   "description": "Middleware for Koa to Sign S3 upload requests",
   "main": "index.js",
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/ktonon/koa-s3-sign-upload#readme",
   "dependencies": {
-    "aws-sdk": "^2.9.0",
+    "aws-sdk": "2.348.0",
     "koa-router": "^5.4.1",
     "node-uuid": "^1.4.7",
     "eslint": "^3.19.0",
