--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
   "dependencies": {
     "aws-sdk": "2.348.0",
     "koa-router": "^5.4.1",
-    "node-uuid": "^1.4.7",
-    "eslint": "^3.19.0",
-    "eslint-plugin-node": "^4.2.2"
+    "node-uuid": "^1.4.7"
   }
 }
