--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@d2l/koa-s3-sign-upload",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "engines": {
     "node": "8.10.0"
   },
@@ -29,7 +29,7 @@
   "dependencies": {
     "aws-sdk": "^2.9.0",
     "koa-router": "^7.4.0",
-    "node-uuid": "^1.4.7",
+    "uuid": "^3.3.2",
     "eslint": "^3.19.0",
     "eslint-plugin-node": "^4.2.2"
   }
